<resources>
    <string name="app_name">Plasma</string>
    <string name="full_name">full name</string>
    <string name="Enter_name">Enter name</string>
    <string name="Enter_email">Enter email</string>
    <string name="Enter_pass">Enter password</string>
    <string name="about_us">The project “PLASMA" is being developed bearing in mind the noble act of saving a life in need of blood.</string>


    <string name="name1">Name:  Sumiya Akter</string>
    <string name="name2">Name:  Khondokar Riaz Mahmud</string>
    <string name="name3">Name:  Tareq Mahmud</string>

    <string name="Id1">Id:  17.01.04.143</string>
    <string name="Id2">Id:  17.01.04.147</string>
    <string name="Id3">Id:  17.01.04.135</string>


    <string name="email">email</string>
    <string name="password">password</string>
    <string name="phone">phone</string>
    <string name="blood">blood group</string>
    <string name="add">your address</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="input_error_name">name required</string>
    <string name="input_error_email">email required</string>
    <string name="input_error_password">password required</string>
    <string name="input_error_phone">phone required</string>
    <string name="input_error_blood"> invalid blood type </string>
    <string name="input_error_add"> enter address </string>
    <string name="input_error_password_length">password should be atleast 6 characters long</string>
    <string name="input_error_phone_invalid">enter a valid phone number</string>
    <string name="registration_success">Registered Successfully</string>
    <string name="input_error_email_invalid">enter a valid email</string>
</resources>
