<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/bb"
    tools:context=".Login">

    <TextView
        android:layout_marginLeft="110sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Login"
        android:textSize="42sp"

        android:fontFamily="cursive"
        android:textColor="@color/redt"

        />

    <EditText

        android:layout_marginTop="80sp"
        android:id="@+id/login_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/ic_name"
        android:drawablePadding="@dimen/drawable_padding"
        android:hint="@string/Enter_email"
        android:nextFocusDown="@id/edit_text_email"
        android:textColor="@color/colorText"
        android:textColorHint="@color/colorHint"
        android:textSize="20sp"
        />

    <EditText

        android:layout_marginTop="20sp"
        android:id="@+id/login_pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/ic_password"
        android:drawablePadding="@dimen/drawable_padding"
        android:hint="@string/Enter_pass"
        android:nextFocusDown="@id/edit_text_email"
        android:textColor="@color/colorText"
        android:textColorHint="@color/colorHint"
        android:textSize="20sp"
        />


        <Button
        android:layout_marginTop="20sp"
        android:id="@+id/login_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_button_register"
        android:text="@string/login"
        android:textAllCaps="false"
        android:textColor="@color/colorText" />


    <Button
        android:layout_marginTop="20sp"
        android:id="@+id/login_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_button_register"
        android:text="@string/register"
        android:textAllCaps="false"
        android:textColor="@color/colorText" />

</LinearLayout>